--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0062)file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html -->
+<!-- saved from url=(0062)file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>body {
   max-width: 980px;
   border: 1px solid #ddd;
@@ -1079,7 +1079,7 @@ body .markdown-body
 .codehilite .vi{color:teal}
 .codehilite .il{color:#009999}
 .codehilite .gc{color:#999;background-color:#EAF2F5}
-</style><script type="text/javascript" src="./index2_files/MathJax.js.下载"></script>
+</style><script type="text/javascript" src="./index_files/MathJax.js.下载"></script>
 <script>
 MathJax.Hub.Config({
   config: ["MMLorHTML.js"],
@@ -1105,7 +1105,7 @@ MathJax.Hub.Config({
   showProcessingMessages: false
 });
 </script>
-<title>SublimeText+Markdown</title><style type="text/css">.MathJax_Hover_Frame {border-radius: .25em; -webkit-border-radius: .25em; -moz-border-radius: .25em; -khtml-border-radius: .25em; box-shadow: 0px 0px 15px #83A; -webkit-box-shadow: 0px 0px 15px #83A; -moz-box-shadow: 0px 0px 15px #83A; -khtml-box-shadow: 0px 0px 15px #83A; border: 1px solid #A6D ! important; display: inline-block; position: absolute}
+<title>index</title><style type="text/css">.MathJax_Hover_Frame {border-radius: .25em; -webkit-border-radius: .25em; -moz-border-radius: .25em; -khtml-border-radius: .25em; box-shadow: 0px 0px 15px #83A; -webkit-box-shadow: 0px 0px 15px #83A; -moz-box-shadow: 0px 0px 15px #83A; -khtml-box-shadow: 0px 0px 15px #83A; border: 1px solid #A6D ! important; display: inline-block; position: absolute}
 .MathJax_Menu_Button .MathJax_Hover_Arrow {position: absolute; cursor: pointer; display: inline-block; border: 2px solid #AAA; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -khtml-border-radius: 4px; font-family: 'Courier New',Courier; font-size: 9px; color: #F0F0F0}
 .MathJax_Menu_Button .MathJax_Hover_Arrow span {display: block; background-color: #AAA; border: 1px solid; border-radius: 3px; line-height: 0; padding: 4px}
 .MathJax_Hover_Arrow:hover {color: white!important; border: 2px solid #CCC!important}
@@ -1233,41 +1233,41 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 @font-face {font-family: MathJax_Size3; src: url('https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/fonts/HTML-CSS/TeX/woff/MathJax_Size3-Regular.woff?V=2.7.1') format('woff'), url('https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/fonts/HTML-CSS/TeX/otf/MathJax_Size3-Regular.otf?V=2.7.1') format('opentype')}
 @font-face {font-family: MathJax_Size4; src: url('https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/fonts/HTML-CSS/TeX/woff/MathJax_Size4-Regular.woff?V=2.7.1') format('woff'), url('https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/fonts/HTML-CSS/TeX/otf/MathJax_Size4-Regular.otf?V=2.7.1') format('opentype')}
 .MathJax .noError {vertical-align: ; font-size: 90%; text-align: left; color: black; padding: 1px 3px; border: 1px solid}
-</style></head><body><div style="visibility: hidden; overflow: hidden; position: absolute; top: 0px; height: 1px; width: auto; padding: 0px; border: 0px; margin: 0px; text-align: left; text-indent: 0px; text-transform: none; line-height: normal; letter-spacing: normal; word-spacing: normal;"><div id="MathJax_Hidden"></div></div><div id="MathJax_Message" style="display: none;"></div><article class="markdown-body"><h1 id="sublime-text-markdown"><a name="user-content-sublime-text-markdown" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#sublime-text-markdown" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Sublime Text 的 Markdown 编辑环境搭建</h1>
+</style></head><body><div style="visibility: hidden; overflow: hidden; position: absolute; top: 0px; height: 1px; width: auto; padding: 0px; border: 0px; margin: 0px; text-align: left; text-indent: 0px; text-transform: none; line-height: normal; letter-spacing: normal; word-spacing: normal;"><div id="MathJax_Hidden"></div></div><div id="MathJax_Message" style="display: none;"></div><article class="markdown-body"><h1 id="sublime-text-markdown"><a name="user-content-sublime-text-markdown" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#sublime-text-markdown" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Sublime Text 的 Markdown 编辑环境搭建</h1>
 <p>你可以首先阅读我的<a href="https://github.com/EthanTongLIU/EthanTongLIU.github.io/edit/master/README.html">介绍</a>来了解我。</p>
 <div class="toc">
 <ul>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#sublime-text-markdown">Sublime Text 的 Markdown 编辑环境搭建</a><ul>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdown">初识 Markdown</a></li>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#sublime-text">安装 Sublime Text</a></li>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#package-control">安装插件 Package Control</a></li>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdownediting">安装插件 MarkdownEditing</a></li>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdown-preview">安装插件 Markdown Preview</a></li>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdownediting_1">更改 MarkdownEditing 插件设置</a></li>
-<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdown-preview_1">更改 Markdown Preview 插件设置</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#sublime-text-markdown">Sublime Text 的 Markdown 编辑环境搭建</a><ul>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdown">初识 Markdown</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#sublime-text">安装 Sublime Text</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#package-control">安装插件 Package Control</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdownediting">安装插件 MarkdownEditing</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdown-preview">安装插件 Markdown Preview</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdownediting_1">更改 MarkdownEditing 插件设置</a></li>
+<li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdown-preview_1">更改 Markdown Preview 插件设置</a></li>
 </ul>
 </li>
 </ul>
 </div>
-<h2 id="markdown"><a name="user-content-markdown" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdown" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>初识 Markdown</h2>
+<h2 id="markdown"><a name="user-content-markdown" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdown" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>初识 Markdown</h2>
 <p>使用 Git 已经将近一年了，到现在基本上进步不是很大，只会做一些基本操作，在写这篇文章之前，我很好奇在创建每个项目的时候系统都会给添加一个 README.md 文件，我一直搞不清楚这个 md 文件是一种什么类型的文件。最近，一是因为有点时间，二是因为好奇，我比较详细地了解了下 Markdown 这种语言，虽然我不是很了解 HTML ，但是总归是有点基础，我很惊艳于 Markdown 的简单易用，感觉就像是发现了新大陆一样。由于我之前一直使用 LaTeX 进行写作，不管是写论文、技术文档、平时的大作业或者各种报告，我十分喜欢使用 LaTeX，因为其排版十分美观，而且功能强大，但是其也有很大的局限性。然而 Markdown 的出现可以说是完美的解决了我现在的需求，不仅仅可以方便快速的写博客，还可以兼容 LaTeX 的许多属性，比如可以插入数学公式。我希望以后 Markdown 可以成为我学习生活中的新锐利器。</p>
 <p>工欲善其事，必先利其器。由于我一直不喜欢使用庞大冗余的 IDE 工具，因此在上网查找了一圈以后，我决定暂时不去使用目前的 Markdown 编辑工具，而是使用 Sublime Text，最终达到了我比较满意的写作环境效果。</p>
 <p>由于这个工作可能之前在网上有许多人已经做过了，类似的技术文档也有不少，但是我在按照网上现存的许多技术文档在进行环境搭建和配置的时候，没有办法参照一篇文档完整而且细致的做好整个工作，而且为了搭建一个优秀的编辑环境，是有许许多多的细节需要去做的。软件每天都在更新，可能本文所介绍的工作在不久的将来也会out，但是为了不让更多想我一样的小白在初次接触 Markdown 的环境搭建的时候遇到同样的问题，少走一些弯路，我还是决定班门弄一下斧吧，希望本文所介绍的教程会对大家有所帮助，权当抛砖引玉吧。</p>
-<h2 id="sublime-text"><a name="user-content-sublime-text" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#sublime-text" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装 Sublime Text</h2>
+<h2 id="sublime-text"><a name="user-content-sublime-text" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#sublime-text" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装 Sublime Text</h2>
 <p><a href="https://www.sublimetext.com/3" target="_blank">Sublime Text 3 官方下载地址</a></p>
-<h2 id="package-control"><a name="user-content-package-control" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#package-control" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装插件 Package Control</h2>
+<h2 id="package-control"><a name="user-content-package-control" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#package-control" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装插件 Package Control</h2>
 <p>Sublime Text 需要使用包控制插件（也就是这里的 Package Control 插件）实现对插件的安装卸载和管理，也就是说，想要在 Sublime Text 中安装其他的插件，需要首先安装 Package Control。</p>
 <p><a href="https://packagecontrol.io/installation" target="_blank">官方给出的安装方法</a></p>
-<h2 id="markdownediting"><a name="user-content-markdownediting" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdownediting" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装插件 MarkdownEditing</h2>
+<h2 id="markdownediting"><a name="user-content-markdownediting" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdownediting" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装插件 MarkdownEditing</h2>
 <p>打开 Sublime Text，依次点击 <code>Preferences</code>、<code>Package Control</code>，接着在弹出的对话框中键入 <code>Install Package</code>。稍等，在弹出的对话框中搜索 <code>MarkdownEditing</code>，找到之后按 <kbd>enter</kbd> 键确认安装。</p>
 <p>如果安装成功，之后会自动弹出纯文本形式显示的插件说明。点击 <code>Preferences</code>，在 <code>Package Settings</code> 里面会显示有 <code>Markdown Editing</code> 的插件设置选项，在里面可以更改该插件的设置。</p>
-<h2 id="markdown-preview"><a name="user-content-markdown-preview" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdown-preview" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装插件 Markdown Preview</h2>
+<h2 id="markdown-preview"><a name="user-content-markdown-preview" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdown-preview" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>安装插件 Markdown Preview</h2>
 <p>打开 Sublime Text，依次点击 <code>Preferences</code>、<code>Package Control</code>，接着在弹出的对话框中键入 <code>Install Package</code>。稍等，在弹出的对话框中搜索 <code>Markdown Preview</code>，找到之后 <kbd>enter</kbd> 键确认安装。</p>
 <p>如果安装成功，之后会自动弹出纯文本形式显示的插件说明。点击 <code>Preferences</code>，在 <code>Package Settings</code> 里面会显示有 <code>Markdown Preview</code> 的插件设置选项，在里面可以更改该插件的设置。</p>
 <hr>
 <p>在安装完上面两个插件之后，还需要知道上面的两个插件具体应该怎么使用，并且更改插件设置，以搭建最令我们满意的编辑环境，于是需要进行接下来的工作。</p>
 <hr>
-<h2 id="markdownediting_1"><a name="user-content-markdownediting_1" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdownediting_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>更改 MarkdownEditing 插件设置</h2>
+<h2 id="markdownediting_1"><a name="user-content-markdownediting_1" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdownediting_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>更改 MarkdownEditing 插件设置</h2>
 <p>首先我们来更改 MarkdownEditing 插件的设置。进入<code>Preferences</code>，<code>Package Settings</code>，找到<code>Markdown Editing</code>，在它的下拉子菜单中会发现许多选项，阅读或者更改这些选项来进行插件的配置。</p>
 <ul>
 <li>
@@ -1371,7 +1371,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 <hr>
 <p>通过以上的设置，我们初步搭建成功 Markdown 的编辑环境，只有编辑环境是不够的，我们还需要搭建 Markdown 文件预览环境，插件 Markdown Preview 的作用就在于此，上面我们已经成功安装了此插件，接下来让我们了解一下这个插件的配置和使用方法。</p>
 <hr>
-<h2 id="markdown-preview_1"><a name="user-content-markdown-preview_1" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/18.html#markdown-preview_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>更改 Markdown Preview 插件设置</h2>
+<h2 id="markdown-preview_1"><a name="user-content-markdown-preview_1" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#markdown-preview_1" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>更改 Markdown Preview 插件设置</h2>
 <ul>
 <li>设置预览热键</li>
 </ul>
