--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 @font-face {font-family: MathJax_Size4; src: url('https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/fonts/HTML-CSS/TeX/woff/MathJax_Size4-Regular.woff?V=2.7.1') format('woff'), url('https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/fonts/HTML-CSS/TeX/otf/MathJax_Size4-Regular.otf?V=2.7.1') format('opentype')}
 .MathJax .noError {vertical-align: ; font-size: 90%; text-align: left; color: black; padding: 1px 3px; border: 1px solid}
 </style></head><body><div style="visibility: hidden; overflow: hidden; position: absolute; top: 0px; height: 1px; width: auto; padding: 0px; border: 0px; margin: 0px; text-align: left; text-indent: 0px; text-transform: none; line-height: normal; letter-spacing: normal; word-spacing: normal;"><div id="MathJax_Hidden"></div></div><div id="MathJax_Message" style="display: none;"></div><article class="markdown-body"><h1 id="sublime-text-markdown"><a name="user-content-sublime-text-markdown" href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#sublime-text-markdown" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Sublime Text 的 Markdown 编辑环境搭建</h1>
-<p>你可以首先阅读我的<a href="https://github.com/EthanTongLIU/EthanTongLIU.github.io/edit/master/README.html">介绍</a>来了解我。</p>
+<p>你可以首先阅读我的<a href="file:///C://Users/%E5%88%98%E9%80%9A/Documents/EthanTongLIU.github.io/README.html">介绍</a>来了解我。</p>
 <div class="toc">
 <ul>
 <li><a href="file:///C:/Users/%E5%88%98%E9%80%9A/appdata/local/temp/19.html#sublime-text-markdown">Sublime Text 的 Markdown 编辑环境搭建</a><ul>
